Add code comments to html and indent code

--- a/form-dump.html
+++ b/form-dump.html
@@ -8,14 +8,16 @@
     <meta name="description" content="Dog grooming studio for dog owners in Kilkenny, Ireland">
     <meta name="keywords"
         content="Dog Grooming Service, Dog Wash, Canine Clippers, Shedding Wash, Pawdicure, Puppy Bath, Kilkenny, Ireland">
-
+    <!-- import stylsheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Good Boy Grooming Studios</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar" >
+        <!-- navigation menu -->
+        <nav class="navbar">
+            <!-- site logo -->
             <a href="index.html">
                 <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
             </a>
@@ -32,11 +34,13 @@
             </ul>
         </nav>
     </header>
-   <section id="thankyou">
-       <div class="thankyou-message">
-       <h1>Thank you, you will receive an email shortly</h1>
-       </div>
-   </section>
+    <!-- Thank you section -->
+    <section id="thankyou">
+        <div class="thankyou-message">
+            <h1>Thank you, you will receive an email shortly</h1>
+        </div>
+    </section>
+    <!-- Footer containing social media icons -->
     <footer>
         <ul class="social-media">
             <li>
