--- a/form.html
+++ b/form.html
@@ -8,14 +8,16 @@
     <meta name="description" content="Dog grooming studio for dog owners in Kilkenny, Ireland">
     <meta name="keywords"
         content="Dog Grooming Service, Dog Wash, Canine Clippers, Shedding Wash, Pawdicure, Puppy Bath, Kilkenny, Ireland">
-
+    <!-- import stylsheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Good Boy Grooming Studios</title>
 </head>
 
 <body>
     <header>
-        <nav class="navbar" >
+        <!-- navigation menu -->
+        <nav class="navbar">
+            <!-- site logo -->
             <a href="index.html">
                 <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
             </a>
@@ -32,33 +34,35 @@
             </ul>
         </nav>
     </header>
+    <!-- Form section -->
     <section id="form-section">
         <div class="form-box">
-        <h2>Let's book an appointment!</h2>
-        <form  class="booking-form" action="/form-dump.html">
-            <div class="form-input">
-                <label for="name">Name:</label>
-                <input id="name" type="text" required>  
-            </div>
-            <div class="form-input">
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email" required>
-            </div>
-            <div class="form-input">
-                <label for="dogs-name">Dog's Name:</label>
-                <input id="dogs-name" type="text">
-            </div>
-            <div class="form-input">
-                <label for="date-time">Date and Time</label>
-                <input type="datetime-local" name="date-time" id="date-time" required>
-            </div>
-            <div class="form-submit">
-                <input type="submit" value="Submit"> 
-            </div>   
-        </form>
+            <h2>Let's book an appointment!</h2>
+            <form class="booking-form" action="/form-dump.html">
+                <div class="form-input">
+                    <label for="name">Name:</label>
+                    <input id="name" type="text" required>
+                </div>
+                <div class="form-input">
+                    <label for="email">Email:</label>
+                    <input type="email" name="email" id="email" required>
+                </div>
+                <div class="form-input">
+                    <label for="dogs-name">Dog's Name:</label>
+                    <input id="dogs-name" type="text">
+                </div>
+                <div class="form-input">
+                    <label for="date-time">Date and Time</label>
+                    <input type="datetime-local" name="date-time" id="date-time" required>
+                </div>
+                <div class="form-submit">
+                    <input type="submit" value="Submit">
+                </div>
+            </form>
         </div>
 
     </section>
+    <!-- Footer containing social media icons -->
     <footer>
         <ul class="social-media">
             <li>
