--- a/gallery.html
+++ b/gallery.html
@@ -8,14 +8,16 @@
     <meta name="description" content="Dog grooming studio for dog owners in Kilkenny, Ireland">
     <meta name="keywords"
         content="Dog Grooming Service, Dog Wash, Canine Clippers, Shedding Wash, Pawdicure, Puppy Bath, Kilkenny, Ireland">
-
+    <!-- import stylsheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Good Boy Grooming Studios</title>
 </head>
 
 <body>
     <header>
+        <!-- navigation menu -->
         <nav class="navbar">
+            <!-- site logo -->
             <a href="index.html">
                 <h1 id="logo"><i class="fas fa-paw"></i>Good Boy<i class="fas fa-paw"></i></h1>
             </a>
@@ -32,18 +34,24 @@
             </ul>
         </nav>
     </header>
+    <!-- Gallery main -->
     <main id="photos">
         <div class="gallery">
             <div class="photo"><img src="assets/images/dog-flower-collar.jpeg" alt="A dog with a flower collar"></div>
             <div class="photo"><img src="assets/images/dog-bed.jpeg" alt="A dog lying in a fluffy bed"></div>
-            <div class="photo"><img src="assets/images/shower-cap-dog.jpg" alt="A dog with a showercap and toothbrush"></div>
+            <div class="photo"><img src="assets/images/shower-cap-dog.jpg" alt="A dog with a showercap and toothbrush">
+            </div>
             <div class="photo"><img src="assets/images/hair-brush.jpeg" alt="A dog getting its hair brushed"></div>
-            <div class="photo"><img src="assets/images/dog-chin-trim.jpeg" alt="A dog getting its chin hairs trimmed"></div>
-            <div class="photo"><img src="assets/images/shampoo-dog.jpg" alt="A small dog with shampoo on it's head"></div>
+            <div class="photo"><img src="assets/images/dog-chin-trim.jpeg" alt="A dog getting its chin hairs trimmed">
+            </div>
+            <div class="photo"><img src="assets/images/shampoo-dog.jpg" alt="A small dog with shampoo on it's head">
+            </div>
             <div class="photo"><img src="assets/images/golden-retreiver.jpeg" alt="A happy golden retreiver"></div>
-            <div class="photo"><img src="assets/images/dog-brushing-teeth.jpeg" alt="A dog running with a brush in it's mouth"></div>
+            <div class="photo"><img src="assets/images/dog-brushing-teeth.jpeg"
+                    alt="A dog running with a brush in it's mouth"></div>
         </div>
     </main>
+    <!-- Footer containing social media icons -->
     <footer>
         <ul class="social-media">
             <li>
