--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
 
         </div>
     </div>
+    <!-- About Us section -->
     <section>
         <div class="flex-container-left">
             <div id="about-us" class="mobile-layout">
@@ -66,6 +67,7 @@
             </div>
         </div>
     </section>
+    <!-- services section -->
     <section>
         <div class="flex-container-right">
             <div id="services" class="mobile-layout">
@@ -85,6 +87,7 @@
             <div id="services-image" class="mobile-image"></div>
         </div>
     </section>
+    <!-- Puppy groom section -->
     <section>
         <div class="flex-container-left">
             <div class="small-text mobile-layout" id="puppy-groom">
