Fix responsive issue in gallery

--- a/gallery.html
+++ b/gallery.html
@@ -47,7 +47,7 @@
             <div class="photo"><img src="assets/images/shampoo-dog.jpg" alt="A small dog with shampoo on it's head">
             </div>
             <div class="photo"><img src="assets/images/golden-retreiver.jpeg" alt="A happy golden retreiver"></div>
-            <div class="photo"><img src="assets/images/dog-brushing-teeth.jpeg"
+            <div class="photo"><img src="assets/images/dog-brushing-teeth.jpg"
                     alt="A dog running with a brush in it's mouth"></div>
         </div>
     </main>
